<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Padaria Trigo Dourado</string>
    <string name="imagem_produto">Imagem do produto</string>
    <string name="adicionar">Adicionar</string>
    <string name="diminuir">-</string>
    <string name="aumentar">+</string>
    <string name="remover">Remover</string>
    <string name="carrinho">Carrinho</string>
    <string name="carrinho_vazio">Seu carrinho está vazio.</string>
    <string name="fechar_pedido">Fechar pedido</string>
    <string name="entrar_na_conta">Entrar na sua conta</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="nao_tem_conta">Não tem conta? Cadastre-se</string>
    <string name="criar_conta">Criar conta</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="registrar">Registrar</string>
    <string name="cardapio">Cardápio</string>
    <string name="abrir_carrinho">Abrir carrinho</string>
    <string name="ver_sacola">Ver sacola</string>
    <string name="finalizar_pedido">Finalizar pedido</string>
    <string name="endereco_entrega">Endereço de entrega</string>
    <string name="forma_pagamento">Forma de pagamento</string>
    <string name="area_nao_atendida">Área não atendida</string>
    <string name="confirmar_pedido">Confirmar pedido</string>
    <string name="nenhum_endereco">Nenhum endereço cadastrado</string>
    <string name="pedido_confirmado">Pedido confirmado</string>
    <string name="pedido_recebido" tools:ignore="PluralsCandidate">Pedido #%1$d recebido com sucesso.</string>
    <string name="voltar_cardapio">Voltar ao cardápio</string>
    <string name="subtotal_valor">Subtotal: %1$s</string>
    <string name="taxa_entrega_valor">Taxa de entrega: %1$s</string>
    <string name="cartao">Cartão</string>
    <string name="pix">Pix</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="total_pagar">Total a pagar</string>
    <string name="cadastrar_novo_endereco">Cadastrar novo endereço</string>
    <string name="cep">CEP</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="numero">Número</string>
    <string name="complemento">Complemento</string>
    <string name="salvar_endereco">Salvar endereço</string>
    <string name="historico">Histórico</string>
    <string name="historico_compras">Histórico de compras</string>
    <string name="dashboard_gerente">Painel do gerente</string>
    <string name="avancar_status">Avançar status</string>
    <string name="ativo">Ativo</string>
    <string name="pedido_numero">Pedido #%1$d</string>
    <string name="status_pedido_recebido">Recebido</string>
    <string name="status_pedido_em_preparo">Em preparo</string>
    <string name="status_pedido_saindo_para_entrega">Saindo para entrega</string>
    <string name="status_pedido_entregue">Entregue</string>
    <string name="status_pedido_cancelado">Cancelado</string>
    <string name="consulte_cep_valido">Consulte um CEP válido.</string>
    <string name="informe_numero">Informe o número.</string>
    <plurals name="total_itens">
        <item quantity="one">%d item</item>
        <item quantity="other">%d itens</item>
    </plurals>
</resources>